--- a/ex3/loginpage.html
+++ b/ex3/loginpage.html
@@ -48,7 +48,7 @@
            <input type="submit" name="submit" onclick="validateForm()" formaction="homepage.html">&nbsp;&nbsp;&nbsp;
 
             <input type="reset" name="reset">&nbsp;&nbsp;&nbsp;
-            <button>< formaction="Register.html">register</a></button>
+            <button>< href="Register.html">register</a></button>
         </div>
 
     </form>
