--- a/ex4/transaction.html
+++ b/ex4/transaction.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Transactions</title>
     <style>
-        body {background-color: beige;}
+        body {background-color: light yellow;}
     </style>
     <script>
         let balance = 0;
@@ -64,7 +64,7 @@
 <body>
     <div>
         <center>
-            <h1>Bank of Baroda</h1>
+            <h1>Bank of India</h1>
        
             <h2>Welcome!</h2>
         </center>
